--- a/index.html
+++ b/index.html
@@ -92,16 +92,22 @@
       <div class="carousel-wrapper">
         <div class="carousel" id="carousel">
           <div class="carousel-item">
-            <img src="https://i.ibb.co/MDdjhNt/Exemplo-1.jpg" alt="WhatsApp interaction 1">
+            <img src="https://i.ibb.co/8mTKQnv/Onb-1.png" alt="WhatsApp interaction 1">
           </div>
           <div class="carousel-item">
-            <img src="https://i.ibb.co/vwdCTMc/Exemplo-2.jpg" alt="WhatsApp interaction 2">
+            <img src="https://i.ibb.co/8KYYzKs/Onb-2.png" alt="WhatsApp interaction 2">
           </div>
           <div class="carousel-item">
-            <img src="https://i.ibb.co/syL5RkK/Exemplo-3.jpg" alt="WhatsApp interaction 3">
+            <img src="https://i.ibb.co/jrrzzPM/Onb-3.png" alt="WhatsApp interaction 3">
           </div>
           <div class="carousel-item">
-            <img src="https://i.ibb.co/GdQ8Xwt/Exemplo-4.jpg" alt="WhatsApp interaction 4">
+            <img src="https://i.ibb.co/dp92jzT/Onb-4.png" alt="WhatsApp interaction 4">
+          </div>
+          <div class="carousel-item">
+            <img src="https://i.ibb.co/TbNWHyS/Onb-5.png" alt="WhatsApp interaction 5">
+          </div>
+          <div class="carousel-item">
+            <img src="https://i.ibb.co/7yfQQRb/Onb-6.png" alt="WhatsApp interaction 6">
           </div>
         </div>
       </div>
